--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,28 +1,45 @@
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-  <li class="nav-item">
-    <a class="nav-link" href="/users/seller">Добавить объявление</a>
-  </li>
-</ul>
-{{/if}}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/">На главную</a>
+      </li>
+      {{!-- {{#if userName}} --}}
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/users/login">{{userName}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/logout">Выйти</a>
+        </li>
 
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-  <li class="nav-item">
-    <a class="nav-link" href="/users/category">Категории товаров</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/users/carts">Корзина</a>
-  </li>
-</ul>
+  </div>
+  {{!-- {{#if role}} --}}
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li class="nav-item">
+      <a class="nav-link" href="/users/seller">Добавить объявление</a>
+    </li>
+  </ul>
+  {{!-- {{/if}} --}}
 
-{{else}}
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-  <li class="nav-item">
-    <a class="nav-link" href="/users/registration">Регистрация</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/users/login">Войти</a>
-  </li>
-</ul>
-</div>
-{{/if}}
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li class="nav-item">
+      <a class="nav-link" href="/users/category">Категории товаров</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/users/carts">Корзина</a>
+    </li>
+  </ul>
+
+  {{!-- {{else}} --}}
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li class="nav-item">
+      <a class="nav-link" href="/users/registration">Регистрация</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/users/login">Войти</a>
+    </li>
+  </ul>
+  </div>
+  {{!-- {{/if}} --}}
 </nav>
