--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -4,7 +4,7 @@
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="/">На главную</a>
       </li>
-      {{!-- {{#if userName}} --}}
+      {{#if userName}}
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="/users/login">{{userName}}</a>
@@ -20,7 +20,7 @@
       <a class="nav-link" href="/users/seller">Добавить объявление</a>
     </li>
   </ul>
-  {{!-- {{/if}} --}}
+  {{/if}}
 
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
