--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,10 +1,7 @@
 <div class="container h-100">
   <div class="row h-100 justify-content-center align-items-center">
     <div class="col-10 col-md-8 col-lg-6">
-      <form class="signup-form" action="/login" method="POST">
-        <div class="form-group mt-5">
-          <input type="text" name="name" class="form-control" placeholder="name..." required>
-        </div>
+      <form class="signup-form" action="/users/login" method="POST">
         <div class="form-group mt-5">
           <input type="email" name="email" class="form-control" placeholder="email..." required>
         </div>
