--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -9,37 +9,41 @@
         <li class="nav-item">
           <a class="nav-link" href="/users/login">{{userName}}</a>
         </li>
+ 
         <li class="nav-item">
           <a class="nav-link" href="/users/logout">Выйти</a>
         </li>
 
+
   </div>
-  {{!-- {{#if role}} --}}
-  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    <li class="nav-item">
-      <a class="nav-link" href="/users/seller">Добавить объявление</a>
-    </li>
-  </ul>
+  {{#if userAdmin}}
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+            <a class="nav-link" href="/users/login">Admin - {{userAdmin}}</a>
+          </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/votes/">Добавить объявление</a>
+      </li>
+    </ul>
   {{/if}}
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="/users/category">Категории товаров</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/carts">Корзина</a>
+      </li>
+    </ul>
 
-  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    <li class="nav-item">
-      <a class="nav-link" href="/users/category">Категории товаров</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/users/carts">Корзина</a>
-    </li>
-  </ul>
-
-  {{!-- {{else}} --}}
-  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    <li class="nav-item">
-      <a class="nav-link" href="/users/registration">Регистрация</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/users/login">Войти</a>
-    </li>
-  </ul>
-  </div>
-  {{!-- {{/if}} --}}
+  {{else}}
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="/users/registration">Регистрация</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/login">Войти</a>
+      </li>
+    </ul>
+    </div>
+  {{/if}}
 </nav>
