--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -28,7 +28,7 @@
   {{/if}}
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="/users/category">Категории товаров</a>
+        <a class="nav-link" href="/posts">Объявления</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/users/carts">Корзина</a>
