--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -7,7 +7,7 @@
       {{#if userName}}
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/users/login">{{userName}}</a>
+          <a class="nav-link" href="/profile">{{userName}}</a>
         </li>
  
         <li class="nav-item">
