--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container d-flex" style="align-items: center;">
 	<div style="padding: 2rem;">
 		<div class="card" style="width: 18rem;">
 			<img
@@ -11,16 +11,98 @@
 			</div>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item"><a href="#">{{user.email}}</a></li>
-				<li class="list-group-item">A second item</li>
+				<li class="list-group-item"><p class="card-text">Wallet - {{user.money}}$</p></li>
 			</ul>
 		</div>
 	</div>
+
+	<div class="container">
+		<div class="accordion" id="accordionExample">
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingOne">
+					<button
+						class="accordion-button"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#collapseOne"
+						aria-expanded="true"
+						aria-controls="collapseOne"
+					>
+						Take stock
+					</button>
+				</h2>
+				<div
+					id="collapseOne"
+					class="accordion-collapse collapse show"
+					aria-labelledby="headingOne"
+					data-bs-parent="#accordionExample"
+				>
+					<div class="accordion-body">
+						<label for="customRange3" class="form-label">select quantity</label>
+						<input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3" />
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingTwo">
+					<button
+						class="accordion-button collapsed"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#collapseTwo"
+						aria-expanded="false"
+						aria-controls="collapseTwo"
+					>
+						Sell stock
+					</button>
+				</h2>
+				<div
+					id="collapseTwo"
+					class="accordion-collapse collapse"
+					aria-labelledby="headingTwo"
+					data-bs-parent="#accordionExample"
+				>
+					<div class="accordion-body">
+						tut
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="headingThree">
+					<button
+						class="accordion-button collapsed"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#collapseThree"
+						aria-expanded="false"
+						aria-controls="collapseThree"
+					>
+						Sell out Stock
+					</button>
+				</h2>
+				<div
+					id="collapseThree"
+					class="accordion-collapse collapse"
+					aria-labelledby="headingThree"
+					data-bs-parent="#accordionExample"
+				>
+					<div class="accordion-body">
+						tut
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+<div class="container">
 	<div class="card my-2">
 		<h5 class="card-header">Share</h5>
 		<div class="card-body">
 			<h5 class="card-title">tut tipo nazvannie akcii</h5>
 			<p class="card-text"> Your count of Shares - {{user.countShare}}</p>
-			<p class="card-text">Wallet - {{user.money}}$</p>
+
 		</div>
 
 		<div class="progress">
@@ -30,14 +112,8 @@
 				aria-valuenow="75"
 				aria-valuemin="0"
 				aria-valuemax="100"
-				style="width: {{percentShares}}%"
+				style="width: {{percentShares}}% "
 			>{{percentShares}}%</div>
 		</div>
 	</div>
-
-	<div class="card-body">
-		<a href="/shares" class="card-link">buy shares</a>
-		<a href="#" class="card-link">sell shares</a>
-	</div>
-
 </div>
