--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,4 +1,4 @@
-<div class="container h-100" style="width: 550px; margin-top: 30px;">
+<div class="container h-100" style="width: 1000px; margin-top: 30px;">
   <div class="row h-100 justify-content-center align-items-center">
     <div class="col-10 col-md-8 col-lg-6">
       <form class="signup-form" action="/users/login" method="POST">
@@ -9,7 +9,7 @@
           <input type="password" name="password" class="form-control" placeholder="Пароль" required>
         </div>
         <div class="text-center mt-5" style="margin-top: 15px;">
-          <button type="submit" class="btn btn-secondary">&nbsp; Войти &nbsp;</button>
+          <button type="submit" class="btn btn-dark">&nbsp; Войти &nbsp;</button>
         </div>
       </form>
     </div>
