--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,68 +1,17 @@
-{{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/">На главную</a>
-      </li>
-      {{#if userName}}
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">{{userName}}</a>
-        </li>
- 
-        <li class="nav-item">
-          <a class="nav-link" href="/users/logout">Выйти</a>
-        </li>
-
-
-  </div>
-  {{#if userAdmin}}
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-            <a class="nav-link" href="/users/login">Admin - {{userAdmin}}</a>
-          </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/votes/">Добавить объявление</a>
-      </li>
-    </ul>
-  {{/if}}
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link" href="/posts">Объявления</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/users/carts">Корзина</a>
-      </li>
-    </ul>
-
-  {{else}}
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link" href="/users/registration">Регистрация</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/users/login">Войти</a>
-      </li>
-    </ul>
-    </div>
-  {{/if}}
-</nav> --}}
 <nav>
   <div class="nav-wrapper teal accent-4">
-    <a href="/" class="brand-logo right">PROJECT</a>
+    <div class="brand-logo right" style="text-decoration: none;">PROJECT NAME</div>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       {{#if userName}}
-        <li><a href="/profile">{{userName}}</a></li>
-        <li><a href="/posts">Объявления</a></li>
-        <li><a href="/users/carts">Корзина</a></li>
-        <li><a href="/users/logout">Выйти</a></li>
+        <li><a style="text-decoration: none; font-size: 25px; letter-spacing: 1px;" href="/profile">{{userName}}</a></li>
         {{#if userAdmin}}
-          <li><a href="/profile">ADMIN - {{userAdmin}}</a></li>
-          <li><a href="/votes/">Добавить объявление</a></li>
+          <li><a style="text-decoration: none;" href="/votes/">Добавить объявление</a></li>
         {{/if}}
+        <li><a style="text-decoration: none;" href="/">Главная</a></li>
+        <li><a style="text-decoration: none;" href="/users/logout">Выйти</a></li>
       {{else}}
-        <li><a href="/users/registration">Регистрация</a></li>
-        <li><a href="/users/login">Войти</a></li>
+        <li><a style="text-decoration: none;" href="/users/registration">Регистрация</a></li>
+        <li><a style="text-decoration: none;" href="/users/login">Войти</a></li>
       {{/if}}
     </ul>
   </div>
