--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -33,6 +33,7 @@
 					</button>
 				</h2>
 				<div
+					data-accordbuy
 					id="collapseOne"
 					class="accordion-collapse collapse show"
 					aria-labelledby="headingOne"
@@ -72,6 +73,7 @@
 					</button>
 				</h2>
 				<div
+					data-accordsell
 					id="collapseTwo"
 					class="accordion-collapse collapse"
 					aria-labelledby="headingTwo"
