--- a/src/views/posts.hbs
+++ b/src/views/posts.hbs
@@ -1,24 +1,27 @@
-<div class="row my-2" id="postsContainer">
-
-	{{#if posts}}
-
-		{{#each posts}}
-			<div data-id="{{this._id}}" class="col-2 my-2">
-				<div class="card" style="width: 18rem;">
-					<img src="..." class="card-img-top" alt="..." />
-					<div class="card-body">
-						<h5 class="card-title">{{this.title}}</h5>
-						<p class="card-text">{{this.body}}</p>
-						<div>
-							<a href="#" class="btn btn-primary">Go somewhere</a>
-							<a href="#" class="btn btn-primary">Go somewhere</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		{{/each}}
-	{{else}}
-		<div>Postov Net</div>
-	{{/if}}
+<div data-postsContainer>
+  <div class="row my-2">
+    {{#if posts}}
+    {{#each posts}}
+    <div data-id="{{this._id}}" class="col-2 my-2">
+      <div class="card" style="width: 18rem;">
+        <img src="{{this.picture}}" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">{{this.title}}</h5>
+          <p class="card-text">{{this.body}}</p>
+          <div>
+            <button data-like='1' class="btn btn-primary" name="like">Like</button>
+            <h6 data-likeCount>{{this.likes.length}}</h6>
+            <button data-dislike='1' class="btn btn-primary" name="dislike">Dislike</button>
+            <h6 data-disLikeCount>{{this.dislikes.length}}</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    {{/each}}
+    {{else}}
+  </div>
+</div>
+<div>Postov Net</div>
+{{/if}}
 
 </div>
